--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "code": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "next": "15.0.3",
