--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "graphql-request": "^7.1.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.3",
@@ -27,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
   }
