--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
+    "embla-carousel-wheel-gestures": "^8.0.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "tailwindcss-motion": "^0.4.3-beta"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.3",
