--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "code": "graphql-codegen --config codegen.ts"
+    "gen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
