make customer address editable

--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "embla-carousel-wheel-gestures": "^8.0.1",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
+    "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
     "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "swr": "^2.2.5"
+    "sonner": "^1.7.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.3",
