--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
-    "@searchkit/api": "^4.13.0",
-    "@searchkit/instantsearch-client": "^4.14.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.3.1",
@@ -24,12 +22,11 @@
     "graphql-request": "^7.1.2",
     "lucide-react": "^0.460.0",
     "motion": "^11.11.17",
-    "next": "^15",
+    "next": "15.0.3",
     "next-intl": "^3.25.1",
     "next-themes": "^0.4.3",
-    "react": "^19",
-    "react-dom": "^19",
-    "react-instantsearch": "^7.15.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
     "tailwindcss-animate": "^1.0.7"
