--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.3",
     "react": "^19",
     "react-dom": "^19",
+    "react-hook-form": "^7.54.2",
     "react-instantsearch": "^7.15.3",
     "sonner": "^1.7.0",
     "swr": "^2.2.5",
@@ -44,6 +45,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
+    "fluid-tailwind": "^1.0.4",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
