--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-VENDURE_API_URL=
+NEXT_PUBLIC_VENDURE_API_URL=http://localhost:8000/shop-api
+NEXT_PUBLIC_ROOT_URL=http://localhost:8000
+NEXT_PUBLIC_URL=http://localhost:3000
