--- a/.github/workflows/build-push-nextjs.yaml
+++ b/.github/workflows/build-push-nextjs.yaml
@@ -46,5 +46,9 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
             "nextjs_build_secrets=
-            NEXT_PUBLIC_VENDURE_API_URL=${{ vars.NEXT_PUBLIC_VENDURE_API_URL }}"
+            #EXAMPLE_BUILD_SECRET=${{ secrets.EXAMPLE_BUILD_SECRET }}"
           push: true
+        env:
+          NEXT_PUBLIC_URL: ${{ vars.NEXT_PUBLIC_URL }}
+          NEXT_PUBLIC_ROOT_URL: ${{ vars.NEXT_PUBLIC_ROOT_URL }}
+          NEXT_PUBLIC_VENDURE_API_URL: ${{ vars.NEXT_PUBLIC_VENDURE_API_URL }}
