--- a/.github/workflows/build-push-nextjs.yaml
+++ b/.github/workflows/build-push-nextjs.yaml
@@ -46,9 +46,9 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
             "nextjs_build_secrets=
-            #EXAMPLE_BUILD_SECRET=${{ secrets.EXAMPLE_BUILD_SECRET }}"
+            #EXAMPLE_BUILD_SECRET=${{ secrets.EXAMPLE_BUILD_SECRET }}
+            NEXT_PUBLIC_URL: ${{ vars.NEXT_PUBLIC_URL }}
+            NEXT_PUBLIC_ROOT_URL: ${{ vars.NEXT_PUBLIC_ROOT_URL }}
+            NEXT_PUBLIC_VENDURE_API_URL: ${{ vars.NEXT_PUBLIC_VENDURE_API_URL }}
+            "
           push: true
-        env:
-          NEXT_PUBLIC_URL: ${{ vars.NEXT_PUBLIC_URL }}
-          NEXT_PUBLIC_ROOT_URL: ${{ vars.NEXT_PUBLIC_ROOT_URL }}
-          NEXT_PUBLIC_VENDURE_API_URL: ${{ vars.NEXT_PUBLIC_VENDURE_API_URL }}
