--- a/.github/workflows/build-push-nextjs.yaml
+++ b/.github/workflows/build-push-nextjs.yaml
@@ -49,5 +49,6 @@ jobs:
             NEXT_PUBLIC_URL=${{ vars.NEXT_PUBLIC_URL }}
             NEXT_PUBLIC_ROOT_URL=${{ vars.NEXT_PUBLIC_ROOT_URL }}
             NEXT_PUBLIC_VENDURE_API_URL=${{ vars.NEXT_PUBLIC_VENDURE_API_URL }}
+            NEXT_PUBLIC_ELASTICSEARCH_HOST=${{ vars.NEXT_PUBLIC_ELASTICSEARCH_HOST }}
             "
           push: true
